feat(S13P31A706-44): 변경 사항 WIP