@@ -1,15 +1,22 @@
 package com.topoom.missingcase.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.topoom.missingcase.domain.CaseFile;
 import com.topoom.missingcase.domain.MissingCase;
-import com.topoom.missingcase.dto.MissingCaseDto;
+import com.topoom.missingcase.dto.MissingCaseDetailResponse;
+import com.topoom.missingcase.dto.MissingCaseListResponse;
+import com.topoom.missingcase.dto.MissingCaseStatsResponse;
+import com.topoom.missingcase.repository.CaseContactRepository;
 import com.topoom.missingcase.repository.CaseFileRepository;
 import com.topoom.missingcase.repository.MissingCaseRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.ZoneOffset;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,107 +25,127 @@ public class MissingCaseService {
 
     private final MissingCaseRepository missingCaseRepository;
     private final CaseFileRepository caseFileRepository;
+    private final ObjectMapper objectMapper;
 
     private String generateFileUrl(String s3Key) {
-        return "https://s3.example.com/" + s3Key;
+        return "https://cdn.example.com/" + s3Key;
     }
 
-    public List<MissingCaseDto.Response> getAllCases() {
-        return missingCaseRepository.findByIsDeletedFalse().stream()
-                .map(caseEntity -> {
-                    MissingCaseDto.Response.MainImage mainImage = null;
-                    if (caseEntity.getMainImage() != null) {
-                        mainImage = new MissingCaseDto.Response.MainImage(
-                                caseEntity.getMainImage().getId(),
-                                generateFileUrl(caseEntity.getMainImage().getS3Key())
-                        );
-                    }
-
-                    return new MissingCaseDto.Response(
-                            caseEntity.getId(),
-                            caseEntity.getPersonName(),
-                            caseEntity.getTargetType(),
-                            caseEntity.getAgeAtTime(),
-                            caseEntity.getGender(),
-                            caseEntity.getOccurredAt(),
-                            caseEntity.getOccurredLocation(),
-                            mainImage
-                    );
-                })
-                .toList();
+    public List<MissingCaseListResponse> getAllCases() {
+        return missingCaseRepository.findAllWithMainFile().stream()
+                .map(this::toDto)
+                .collect(Collectors.toList());
     }
 
-    public MissingCaseDto.DetailResponse getCaseById(Long id) {
-        MissingCase caseEntity = missingCaseRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("해당 ID의 실종 사례가 없습니다."));
+    private MissingCaseListResponse toDto(MissingCase mc) {
+        MissingCaseListResponse.MainImage mainImage = null;
 
-        List<CaseFile> files = caseFileRepository.findByMissingCase(caseEntity);
-
-        List<MissingCaseDto.DetailResponse.ImageItem> inputImages = files.stream()
-                .filter(f -> f.getIoRole().name().equals("INPUT"))
-                .map(f -> new MissingCaseDto.DetailResponse.ImageItem(
-                        f.getId(),
-                        f.getPurpose().name(),
-                        generateFileUrl(f.getS3Key()),
-                        f.getContentType(),
-                        f.getWidthPx(),
-                        f.getHeightPx()
-                )).toList();
-
-        List<MissingCaseDto.DetailResponse.ImageItem> outputImages = files.stream()
-                .filter(f -> f.getIoRole().name().equals("OUTPUT"))
-                .map(f -> new MissingCaseDto.DetailResponse.ImageItem(
-                        f.getId(),
-                        f.getPurpose().name(),
-                        generateFileUrl(f.getS3Key()),
-                        f.getContentType(),
-                        f.getWidthPx(),
-                        f.getHeightPx()
-                )).toList();
-
-        MissingCaseDto.DetailResponse.MainImage mainImage = null;
-        if (caseEntity.getMainImage() != null) {
-            CaseFile mainFile = caseEntity.getMainImage();
-            mainImage = new MissingCaseDto.DetailResponse.MainImage(
-                    mainFile.getId(),
-                    generateFileUrl(mainFile.getS3Key())
-            );
+        CaseFile file = mc.getMainFile();
+        if (file != null && file.getId() != null) {
+            mainImage = MissingCaseListResponse.MainImage.builder()
+                    .fileId(file.getId())
+                    .url(generateFileUrl(file.getS3Key()))
+                    .build();
         }
 
-        // 현재는 Mock 데이터, 나중에 AI 분석 결과 연동
-        MissingCaseDto.DetailResponse.AiSupport aiSupport = new MissingCaseDto.DetailResponse.AiSupport(
-                "흰색 반팔티, 뿔테 안경",
-                "175cm / 70kg",
-                List.of(
-                        new MissingCaseDto.DetailResponse.AiInfoItem("두발 형태", "흑색 / 짧은 가르마 머리"),
-                        new MissingCaseDto.DetailResponse.AiInfoItem("체형", "슬림형")
-                )
-        );
+        return MissingCaseListResponse.builder()
+                .id(mc.getId())
+                .personName(mc.getPersonName())
+                .targetType(mc.getTargetType())
+                .ageAtTime((int) mc.getAgeAtTime())
+                .gender(mc.getGender())
+                .occurredAt(mc.getOccurredAt().atZone(ZoneOffset.UTC))
+                .occurredLocation(mc.getOccurredLocation())
+                .mainImage(mainImage)
+                .build();
+    }
 
-        // 5️⃣ 최종 반환
-        return new MissingCaseDto.DetailResponse(
-                caseEntity.getId(),
-                caseEntity.getPersonName(),
-                caseEntity.getTargetType(),
-                caseEntity.getAgeAtTime() != null ? caseEntity.getAgeAtTime().intValue() : null,
-                caseEntity.getCurrentAge() != null ? caseEntity.getCurrentAge().intValue() : null,
-                caseEntity.getGender(),
-                caseEntity.getNationality(),
-                caseEntity.getOccurredAt(),
-                caseEntity.getOccurredLocation(),
-                caseEntity.getHeightCm() != null ? caseEntity.getHeightCm().intValue() : null,
-                caseEntity.getWeightKg() != null ? caseEntity.getWeightKg().intValue() : null,
-                caseEntity.getBodyType(),
-                caseEntity.getFaceShape(),
-                caseEntity.getHairColor(),
-                caseEntity.getHairStyle(),
-                caseEntity.getClothingDesc(),
-                caseEntity.getProgressStatus(),
-                caseEntity.getEtcFeatures(),
-                mainImage,
-                inputImages,
-                outputImages,
-                aiSupport
-        );
+
+    @Transactional(readOnly = true)
+    public MissingCaseDetailResponse getCaseDetail(Long id) {
+        MissingCase mc = missingCaseRepository.findDetailById(id)
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사건입니다."));
+
+        // 대표 이미지
+        MissingCaseDetailResponse.MainImage mainImage = null;
+        if (mc.getMainFile() != null) {
+            mainImage = MissingCaseDetailResponse.MainImage.builder()
+                    .fileId(mc.getMainFile().getId())
+                    .url(generateFileUrl(mc.getMainFile().getS3Key()))
+                    .build();
+        }
+
+        // 입력 이미지들
+        List<MissingCaseDetailResponse.ImageItem> inputImages = caseFileRepository
+                .findByMissingCaseIdAndIoRole(mc.getId(), CaseFile.IoRole.INPUT)
+                .stream()
+                .map(this::toImageItem)
+                .collect(Collectors.toList());
+
+        // 출력 이미지들
+        List<MissingCaseDetailResponse.ImageItem> outputImages = caseFileRepository
+                .findByMissingCaseIdAndIoRole(mc.getId(), CaseFile.IoRole.OUTPUT)
+                .stream()
+                .map(this::toImageItem)
+                .collect(Collectors.toList());
+
+        // AI 정보
+        MissingCaseDetailResponse.AiSupport aiSupport = null;
+        if (mc.getAiSupport() != null) {
+            aiSupport = MissingCaseDetailResponse.AiSupport.builder()
+                    .top1Desc(mc.getAiSupport().getTop1Desc())
+                    .top2Desc(mc.getAiSupport().getTop2Desc())
+                    .infoItems(parseJson(mc.getAiSupport().getInfoItems()))
+                    .build();
+        }
+
+        return MissingCaseDetailResponse.builder()
+                .id(mc.getId())
+                .personName(mc.getPersonName())
+                .targetType(mc.getTargetType())
+                .ageAtTime((int) mc.getAgeAtTime())
+                .currentAge((int) mc.getCurrentAge())
+                .gender(mc.getGender())
+                .nationality(mc.getNationality())
+                .occurredAt(mc.getOccurredAt().atZone(ZoneOffset.UTC))
+                .occurredLocation(mc.getOccurredLocation())
+                .heightCm((int) mc.getHeightCm())
+                .weightKg((int) mc.getWeightKg())
+                .bodyType(mc.getBodyType())
+                .faceShape(mc.getFaceShape())
+                .hairColor(mc.getHairColor())
+                .hairStyle(mc.getHairStyle())
+                .clothingDesc(mc.getClothingDesc())
+                .progressStatus(mc.getProgressStatus())
+                .etcFeatures(mc.getEtcFeatures())
+                .mainImage(mainImage)
+                .inputImages(inputImages)
+                .outputImages(outputImages)
+                .aiSupport(aiSupport)
+                .build();
+    }
+
+    private MissingCaseDetailResponse.ImageItem toImageItem(CaseFile file) {
+        return MissingCaseDetailResponse.ImageItem.builder()
+                .fileId(file.getId())
+                .purpose(file.getPurpose().name())
+                .url(generateFileUrl(file.getS3Key()))
+                .contentType(file.getContentType())
+                .width(null)
+                .height(null)
+                .build();
+    }
+
+    private Object parseJson(String json) {
+        if (json == null) return null;
+        try {
+            return objectMapper.readValue(json, new TypeReference<>() {});
+        } catch (Exception e) {
+            return null;
+        }
+    }
+
+    public MissingCaseStatsResponse getStats() {
+        return null;
     }
 }
